--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@types/react-native-vector-icons": "^6.4.18",
     "immer": "^10.0.3",
     "lottie-react-native": "^6.6.0",
     "react": "18.2.0",
