--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+       <meta-data
+    android:name="com.google.android.geo.API_KEY"
+    android:value="AIzaSyClHO0wKtPgvh79EVYwJs1LKsQYf_TD8sQ"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -21,5 +24,6 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      
     </application>
 </manifest>
