--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-virtualized-view": "^1.0.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
